	  stuff off.
	* drivers/mtd/w25.c:  Beginning of a driver for the Windbond SPI
	  FLASH family (W25x16, W25x32, and W25x64).  The initial check-in
	  is basically just the SST25 driver with some name changes.
	* arch/arm/include/armv7-m/irq.h and arch/arm/src/stm32/stm32_spi.c:
	  Back out the last change in irq.h.  It is (most likely) fine the
	  way it was.  The really interrupt related problem was in stm32_spi.c:
	  When SPI3 is not enabled, then the irqrestore() falls in the
	  else clause.
	* include/nuttx/compiler.h and other files:  Moved always_inline
	  and noinline __attributes__ here.  Also replaced all occurrences
	  of explicit __atributes__ in other files with definitions from
	  this header file.
	* drivers/mtd/w25.c:  The Windbond SPI FLASH W25 FLASH driver is
	  code complete (but still untested).
	* arch/arm/src/stm32/stm32_i2c.c:  I2C improvements from Mike Smith.
	  Unified configuration logic; dynamic timeout calculations;
	  I2C reset logic to recover from locked devices on the bus.
	* configs/*/*/Make.defs, tools/Config.mk, Makefile:  Refactor all
	  common make definitions from the various Make.defs files into
	  the common tools/Make.mk.  Add support for a verbosity options:
	  Specify V=1 on the make command line in order to see the exact
	  commands used in the build (Contributed by Richard Cochran).
	* drivers/net/enc28j60.c:  The ENC28J60 Ethernet driver is
	  now functional.
	* configs/fire-stm32v2:  Add support or the fire-stm32v3 board as
	  well (untested because I do not have a v3 board).
	* lib/stdio/lib_sscanf.c:  Add %n psuedo-format (from Kate).
	* lib/stdio/lib_sscanf.c:  There is an issue of handling input
	  when (1) no fieldwidth is provided and (2) there is no space
	  seperating the input values.  No solutions is in place for this
	  case now (either space or a fieldwidth must be provided).  But
	  at least some of the bad logic that attempted to handle this
	  case has been removed (noted by Kate).